# djreviews

./: .gitignore  README.md  pyproject.toml
djangoreviews/: app.py  settings.py
djreviews/: app.py  models.py  settings.py
example/: db.sqlite3
example/example/: settings.py  urls.py
example/products/: models.py  urls.py  views.py
example/products/fixtures/: dummy_data.yaml
example/products/migrations/: 0001_initial.py
example/products/templates/: index.html
